[gd_scene load_steps=6 format=3 uid="uid://dsim0o8p4bdy"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_mb528"]
[ext_resource type="Script" path="res://scenes/InventoryInterface.gd" id="1_yy1ok"]
[ext_resource type="PackedScene" uid="uid://cpksbbakgod7g" path="res://scenes/player/player.tscn" id="2_sqgik"]
[ext_resource type="PackedScene" uid="uid://cflupa8oq6kte" path="res://scenes/inventory/inventory.tscn" id="4_tig2w"]
[ext_resource type="PackedScene" uid="uid://bcalj77kdivbs" path="res://scenes/inventory/slot.tscn" id="5_gb53o"]

[node name="Game" type="Node2D"]
script = ExtResource("1_mb528")

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Player" parent="." instance=ExtResource("2_sqgik")]

[node name="Items" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yy1ok")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InventoryInterface"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 44.0

[node name="PlayerInventory" parent="CanvasLayer/InventoryInterface/VBoxContainer" instance=ExtResource("4_tig2w")]
unique_name_in_owner = true
layout_mode = 2

[node name="GrabbedSlot" parent="CanvasLayer/InventoryInterface" instance=ExtResource("5_gb53o")]
unique_name_in_owner = true
visible = false
layout_mode = 0

[connection signal="drop_slot_data" from="CanvasLayer/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="CanvasLayer/InventoryInterface" to="CanvasLayer/InventoryInterface" method="_on_gui_input"]
